--- a/src/App.css
+++ b/src/App.css
@@ -1,23 +1,20 @@
 #root {
+  display: flex;
   width: 100%;
   height: 100%;
   margin: 0 auto;
+
+  align-items: center;
+  justify-content: center;
+
   text-align: center;
 }
 
-.chartContainer {
-  display: inline-flex;
-  width: 50%;
-  height: 50%;
+.App {
+  display: flex;
   flex-wrap: wrap;
-}
-
-.chartPanel {
-  display: inline-block;
-  padding: 20px;
-  width: 50%;
-
-  box-sizing: border-box;
-
-  background-color: #111;
+  /* align-items: center; */
+  justify-content: center;
+  width: 100%;
+  height: 100%;
 }
